// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<Loader>
  <styled.div>
    <div
      className="sc-AykKC mtNms"
    >
      <styled.span
        style={Object {}}
      >
        <span
          className="sc-AykKD jvqDyz"
          style={Object {}}
        />
      </styled.span>
      <styled.span
        style={Object {}}
      >
        <span
          className="sc-AykKD jvqDyz"
          style={Object {}}
        />
      </styled.span>
      <styled.span
        style={Object {}}
      >
        <span
          className="sc-AykKD jvqDyz"
          style={Object {}}
        />
      </styled.span>
    </div>
  </styled.div>
</Loader>
`;

exports[`Loader renders a big loader 1`] = `
<Loader
  big={true}
>
  <styled.div
    big={true}
  >
    <div
      className="sc-AykKC mtNms"
    >
      <styled.span
        big={true}
        style={Object {}}
      >
        <span
          className="sc-AykKD iVPQTd"
          style={Object {}}
        />
      </styled.span>
      <styled.span
        big={true}
        style={Object {}}
      >
        <span
          className="sc-AykKD iVPQTd"
          style={Object {}}
        />
      </styled.span>
      <styled.span
        big={true}
        style={Object {}}
      >
        <span
          className="sc-AykKD iVPQTd"
          style={Object {}}
        />
      </styled.span>
    </div>
  </styled.div>
</Loader>
`;
